# socketlab

./: .gitignore  CMakeLists.txt  common.h  conanfile.txt  echo-client.c  echo-server.c  ft-client.c  ft-server.c  get-buf.c  macro.h  mp-echo-server.c  op-client.c  op-server.c  readme.md  signal.c  sock-type.c  test.c
.github/workflows/: build.yml
inc/: common.h
include/: CMakeLists.txt  InetAddr.cpp  InetAddr.h  Socket.cpp  Socket.h  arp.c  arp.h  buffer.c  buffer.h  common.c  common.h  debug.h  ether.c  ether.h  macro.h  minish.c  minish.h  util.c  util.h
lib/: CMakeLists.txt
lib/netpackets/: CMakeLists.txt
lib/netpackets/include/netpackets/: arp.h  common.h  ether.h  helper.h  icmp.h  ip4.h  ipv4.h  packet_buff.h  sock_if.h  vlan.h
lib/netpackets/src/: arp.c  ether.c  helper.c  ipv4.c  packet_buff.c  sock_if.c  vlan.c
lib/simple_log/: CMakeLists.txt  simple_log.c  simple_log.h
lib/simple_log/internal/: simple_log_sink.c  simple_log_sink.h  simple_log_time.c  simple_log_time.h
lib/simple_log/test/: CMakeLists.txt  test_simple_log.c  test_simple_log_sink.c
lib/simplesocket/: CMakeLists.txt
lib/simplesocket/include/simplesocket/: InetAddr.h  Socket.h  TcpSocket.h
lib/simplesocket/src/: InetAddr.cpp  Socket.cpp  TcpSocket.cpp
log/: tcpdump.out
src/: CMakeLists.txt  arp_scan.c  arping.c  array.cpp  broadcast_listen.c  broadcast_send.c  crc16.cpp  crc16.cs  daemon.c  echo-client.c  echo-server.c  epoll-echo-server.c  ft-client.c  ft-server.c  get-buf.c  get_itfs.c  mp-cs.c  mp-echo-server.c  nl_get_ipaddr.c  obj-echo-server.cpp  op-client.c  op-server.c  select-echo-server.c  select.c  send_ether.c  send_icmp_echo.c  send_ip4.c  send_ipv4.c  send_vlan.c  signal.c  sock-type.c  tcpsocket-server.cpp  tofd.c  uecho-client.c  uecho-server.c  writev.c
src/cpp/: Socket.h  util.cpp
src/ft/: CMakeLists.txt  ft-client.c  ft-server.c  ft.h  note.md
test/: CMakeLists.txt  argp.c  check_env.c  cleanup.c  cut.c  popen.c  random_gen.py  round2.c  shm1.c  shm2.c  test_buffer.c  test_end_with.c  test_exec.c  test_log.c  test_minish.c  test_send_ether.sh  test_start_with.c  test_thread.c
