aux_source_directory(${PROJECT_SOURCE_DIR}/test sources)
foreach(main IN LISTS sources)
    message(STATUS "Found source file ${main}")
    get_filename_component(target ${main} NAME_WE)
    add_executable(${target} ${main})
    target_link_libraries(${target} socklib)
    target_link_libraries(${target} minish)
    target_link_libraries(${target} simple_log)
    target_link_libraries(${target} cunit) 
    target_link_directories(${target} PRIVATE "/usr/lib/x86_64-linux-gnu/")
    # target_link_libraries(${target} ${CONAN_LIBS})
    # target_compile_definitions(${target} PUBLIC ${SYSTEM_MACRO})
    if(CMAKE_CXX_COMPILER_ID MATCHES GNU)
        target_link_libraries(${target} pthread)
    endif()
endforeach()

include(CTest)
add_test(NAME test_start_with COMMAND test_start_with)
add_test(NAME test_end_with COMMAND test_end_with)